<!-- Copyright 2015 Baptiste Robert

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<resources>
    <string name="app_name">Chess Knight</string>

    <!-- Main Activity -->
    <string name="action_settings">Settings</string>
    <string name="score">Score</string>
    <string name="best">Best</string>
    <string name="default_score" translatable="false">1</string>
    <string name="instructions">Visit all squares exactly once with the knight.</string>
    <string name="new_game">New Game</string>
    <string name="undo">Undo</string>
    <string name="change_size">Change Size</string>
    <string name="no_ad" translatable="false">No Ads</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7370519346258326/5670843299</string>

    <!-- Game Over Dialog -->
    <string name="game_over">Game over!</string>

    <!-- Win Dialog -->
    <string name="win">You win!</string>
    <string name="continue_game">Continue</string>

    <!-- Sign In Dialog -->
    <string name="not_signed">Please Sign Into Google Play Games Services</string>
    <string name="sign_in">Sign In</string>

    <!-- Google Play Services -->
    <string name="app_id" translatable="false">948454812362</string>
    <string name="signin_failure">Unable to sign in.</string>
    <string name="signin_other_error">There was an issue with sign-in, please try again later.</string>
</resources>
